--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-zip": "^5.0.0",
     "hamburgers": "^1.1.3",
     "jquery": "^3.4.1",
+    "lightgallery.js": "^1.1.3",
     "popper.js": "^1.15.0",
     "terser-webpack-plugin": "^1.3.0",
     "webpack-stream": "^5.2.1",
